Fix jagged lines and clipping

--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -10,10 +10,10 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 4rem;
+    overflow: hidden;
 
     @media screen and (max-width: $breakpoint-mobile) {
       clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-      overflow: hidden;
     }
 
     &__background {
@@ -23,6 +23,11 @@
       background: url("/background.svg") $blue-300;
       background-size: cover;
       clip-path: polygon(0 0, 100% 0, 100% 60%, 0 100%);
+      outline: 1px solid transparent;
+      -webkit-backface-visibility: hidden;
+      -webkit-perspective: 1000;
+      transform: translateZ(0);
+      will-change: transform;
 
       @media screen and (max-width: $breakpoint-mobile) {
         clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
